--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -290,3 +290,11 @@ ISSN={1662-5161},
     journal={PLoS One},
 }
 
+@misc{kollar2021simnet,
+      title={SimNet: Enabling Robust Unknown Object Manipulation from Pure Synthetic Data via Stereo}, 
+      author={Thomas Kollar and Michael Laskey and Kevin Stone and Brijen Thananjeyan and Mark Tjersland},
+      year={2021},
+      eprint={2106.16118},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
+}
